@@ -1,9 +1,7 @@
 # Wa Revamp
-Continuation of the Old MdgWa.
+Continuation of the Old MdgWa.\
 More information coming soon...
 
 ## Download
-[Releases](https://github.com/ItsMadruga/WaRevamp/releases)
-[Pre-Releases](https://github.com/ItsMadruga/WaRevamp/actions/workflows/android.yml)
-
-
+- [Releases](https://github.com/ItsMadruga/WaRevamp/releases)
+- [Pre-Releases](https://github.com/ItsMadruga/WaRevamp/actions/workflows/android.yml)
